--- a/src/sass/child-theme.scss
+++ b/src/sass/child-theme.scss
@@ -1,3 +1,3 @@
 @import "../sass/bootstrap5/bootstrap.scss"; // <------- Loads Bootstrap5
-@import "../sass/fontawesome/font-awesome.scss"; // <------- Font Awesome Icon font
+@import "../sass/fontawesome5/all.scss"; // <------- Font Awesome Icon font
 @import "../css/animate"
